--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,3 @@
-joblib==1.1.0
-numpy==1.22.2
-pandas==1.4.0
-python-dateutil==2.8.2
-pytz==2021.3
-scikit-learn==1.0.2
-scipy==1.8.0
-six==1.16.0
-threadpoolctl==3.1.0
+ydata-synthetic == 0.7.1
+hausdorff == 0.2.6
+numba>=0.49.0
